feat: updated end users profile model and its respective api endpoints
